force-app/main/default/objects/Consent_Form__c/Consent_Form__c.object-meta.xml
<CustomObject>
    <label>Consent Form</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Consent Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consent Forms</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>