force-app/main/default/objects/Consent_Form__c/fields/Applicable_to_All__c.field-meta.xml
<CustomField>
    <fullName>Applicable_to_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate the consent form is applicable to everyone.</description>
    <label>Applicable to All</label>
    <type>Checkbox</type>
</CustomField>