force-app/main/default/objects/Consent_Form__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Controls which user group can access this consent form based on their role: Vendor, Assignee, Client, or Internal.</description>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendors</fullName>
            </value>
            <value>
                <fullName>Assignee</fullName>
            </value>
            <value>
                <fullName>Clients</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>