force-app/main/default/objects/Consent_Form__c/fields/Consent_Form_Text__c.field-meta.xml
<CustomField>
    <fullName>Consent_Form_Text__c</fullName>
    <label>Consent Form Text</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>