force-app/main/default/objects/Consent_Form__c/fields/Consent_Type__c.field-meta.xml
<CustomField>
    <fullName>Consent_Type__c</fullName>
    <description>Determines the type of Consent being assigned</description>
    <label>Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Assignee</fullName>
            </value>
            <value>
                <fullName>Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>