force-app/main/default/objects/Consent_Form__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>